Pthreads for opening connection

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,5 @@ lib_LTLIBRARIES=libwsclient.la
 libwsclient_la_SOURCES = wsclient.c base64.c sha1.c
 library_includedir=$(includedir)/wsclient
 library_include_HEADERS = wsclient.h
+AM_LDFLAGS = -lpthread
 ACLOCAL_AMFLAGS = -I m4
