--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES=libwsclient.la
 libwsclient_la_SOURCES = wsclient.c base64.c sha1.c
 library_includedir=$(includedir)/wsclient
-library_include_HEADERS = wsclient.h
+library_include_HEADERS = wsclient.h config.h
 AM_LDFLAGS = -lpthread
 ACLOCAL_AMFLAGS = -I m4
